--- a/de-stijl-html/gallery.html
+++ b/de-stijl-html/gallery.html
@@ -42,13 +42,13 @@
 		
 		
 		
-		
-		
-		
 		<footer>
-			<img src="pictures/instagram.png" class="social">
-			<img src="pictures/twitter.png" class="social">
-			<img src="pictures/pinterest.png" class="social">
+			<a href="https://www.instagram.com/destijlindestad/" target="_blank">
+				<img src="pictures/instagram.png" class="social"> </a>
+			<a href="https://twitter.com/search?q=%23destijl&lang=en" target="_blank">
+				<img src="pictures/twitter.png" class="social"> </a>
+			<a href="https://www.pinterest.com/mariaanita/de-stijl/" target="_blank">
+				<img src="pictures/pinterest.png" class="social"> </a>
 		</footer>
 	</body>
 
